[improve][ci] Switch to Java 21 as default JVM version for CI (#23373)